ingress_controller/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-bootcamp-service1
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8080
  selector:
    run: kubernetes-bootcamp
