ingress_controller/default-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
spec:
  ports:
  - port: 8083
    protocol: TCP
    targetPort: 8082
  selector:
    app: default-backend
